--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1,5 +1,26 @@
 {% extends 'core/base.html' %}
 {% block content %}
+    {% for experimento in experimentos %}
+        <p>{{experimento.nome}}</p>
+    {% endfor %}
 
+    <form action="{% url 'cadastrar-experimento' %}" method="post">
+        {% csrf_token %}
+        <input type="text" name="nome" id="" placeholder="nome">
+        <input type="submit" value="cadastrar">
+    </form>
 
+    <form action="{% url 'cadastrar-amostra' %}" method="post">
+        {% csrf_token %}
+        <select name="nome_experimento" id="">
+            
+            {% for experimento in experimentos %}
+            <option value="{{experimento.nome}}">{{experimento.nome}}</option>
+            
+            {% endfor %}
+        </select>
+        <input type="number" name="temperatura" placeholder="Temperatura" id="">
+        <input type="number" name="concentracao" placeholder="Concentração" id="">
+        <input type="submit" value="Cadastrar amostra">
+    </form>
 {% endblock %}
