FEAT: modified html dashboard

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'core/index.css' %}">
     <link rel="stylesheet" href="{% static 'core/login.css' %}">
     <link rel="stylesheet" href="{% static 'core/cadastro.css' %}">
+    <link rel="stylesheet" href="{% static 'core/dashboard.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <header id="container-header">
