--- a/core/static/core/dashboard.css
+++ b/core/static/core/dashboard.css
@@ -1,11 +1,92 @@
 .container-dashboard{
     width: 100%;
     height: 90vh;
+    position: relative;
+    display: flex;
 }
 
 .container-dashboard-barra{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     width: 15%;
-    height: 100%;
+    height: 100%; 
     background-color: #dddbdb;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.button-open-modal{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    height: 5%;
+    margin: 5% 0;
+    cursor: pointer;
+}
+
+.button-open-modal:hover{
+    border-bottom: 2px solid #000;
+}
+
+.simbolo{
+    width: 15%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.titulo{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.modal{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.5;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal.ativo{
+    display: flex;
+}
+
+.modal form{
+    width: 30%;
+    height: 60%;
+    background-color: #fff;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    border-radius: 1rem;
+}
+
+.form-titulo{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+}
+
+.container-dashboard-experimentos{
+    width: 85%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
