--- a/core/templates/core/cadastro.html
+++ b/core/templates/core/cadastro.html
@@ -3,51 +3,62 @@
 
 
 {% block content %}
-    <main class="container-principal">
-        <div class="enfeite-cadastro"></div>
-        <section class="caixa-cadastro">
-            <form class="form-cadastro" method="POST" action="/cadastro/">
-                {% csrf_token %}
-                <div class="form-cadastro-titulo">
-                    <h1>cadastro</h1>
-                    
-                </div>
-                <div class="campo-cadastro">
-                    <div class="campo-input">
-                        <label for="input-usuario">
-                            Usuário:
-                        </label>
-                        <input class='input' type="text" id="input-usuario" name="username">
-                    </div>
-                    <div class="campo-input">
-                       <label for="input-senha">
-                            Senha:
-                       </label>
-                        <input class='input' type="password" id="input-senha" name="password">
-                    </div>
-                    <div class="campo-input">
-                        <label for="input-confirmar-senha">
-                             Confirmar senha:
-                        </label>
-                         <input class='input' type="password" id="input-confirmar-senha" name="confirmar_password">
-                     </div>
-                </div>
-                <div class="campo-botao">
-
-                    <button type="submit">Enviar</button>
-                    
-                </div>
-                <div class="campo-aviso">
-                    {% if erro %}
-                        <p>{{erro}}</p>
-                    {% endif %}
-                </div>
-            </form>
-
-        </section>
-        <section class="caixa-cadastro-img">
-            <img src="{% static 'core/Images/login.svg' %}" alt="">
-
-        </section>
-    </main>
+<main class="container-dashboard">
+    <!-- <div class="modal">
+        <form action="{% url 'cadastrar-experimento' %}" method="post">
+            {% csrf_token %}
+            <div class='form-titulo'>
+                <h4>Cadastrar experiemento</h4>
+            </div>
+            <div class="form-input">
+                <input type="text" name="nome" id="" placeholder="nome">
+            </div>
+            <div class="form-input">
+                <input type="submit" value="cadastrar">
+            </div>
+        </form>
+    </div> -->
+    <section class="container-dashboard-barra">
+        <div class="caixa">
+            <div class="simbolo">
+                <span class="material-symbols-outlined">
+                    add
+                </span>
+            </div>
+            <div class="titulo">
+                <p>Adicionar fórmula</p>
+            </div>
+        </div>
+        <div class="caixa">
+            <div class="simbolo">
+                <span class="material-symbols-outlined">
+                    delete
+                </span>
+            </div>
+            <div class="titulo">
+                <p>Deletar fórmula</p>
+            </div>
+        </div>
+        <div class="caixa">
+            <div class="simbolo">
+                <span class="material-symbols-outlined">
+                    add
+                </span>
+            </div>
+            <div class="titulo">
+                <p>Adicionar amostra</p>
+            </div>
+        </div>
+        <div class="caixa">
+            <div class="simbolo">
+                <span class="material-symbols-outlined">
+                    delete
+                </span>
+            </div>
+            <div class="titulo">
+                <p>Deletar amostra</p>
+            </div>
+        </div>
+    </section>
+</main>
 {% endblock %}
