--- a/core/templates/core/visualizar-experimento.html
+++ b/core/templates/core/visualizar-experimento.html
@@ -2,7 +2,35 @@
 
 
 {% block content %}
-<canvas id="visualizacao-experimento"></canvas>
+<div class="container-grafico">
+  <canvas id="visualizacao-experimento"></canvas>
+  <div class="caixa-visualizar">
+    <div class="simbolo">
+        <span class="material-symbols-outlined">
+            add
+        </span>
+    </div>
+    <div class="titulo">
+        <p>Adicionar amostra</p>
+    </div>
+    <div class="simbolo">
+      <span class="material-symbols-outlined">
+          delete
+      </span>
+    </div>
+    <div class="titulo">
+      <p>Deletar amostra</p>
+    </div>
+    <div class="simbolo">
+      <span class="material-symbols-outlined">
+          edit
+      </span>
+    </div>
+    <div class="titulo">
+        <p>Editar amostra</p>
+    </div>
+</div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.js"></script>
 <script>
     (async function() {
