--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'core/login.css' %}">
     <link rel="stylesheet" href="{% static 'core/cadastro.css' %}">
     <link rel="stylesheet" href="{% static 'core/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'core/visualizar-experimento.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script src="{% static 'core/js/modals.js' %}"></script>
 </head>
