FIX(chart) type error

--- a/core/templates/core/visualizar-experimento.html
+++ b/core/templates/core/visualizar-experimento.html
@@ -92,7 +92,7 @@
     </form>
   </div>
   {% if erro_grafico %}
-    <h3 id="aviso-erro-experimento">Por favor, adicione pelo menos duas amostras para visualizar o gŕafico</h3>
+    <h3 id="aviso-erro-experimento">Por favor, adicione pelo menos duas amostras para visualizar o gráfico</h3>
     <div class="container-grafico-box">
     </div>
   {% else %}
