--- a/core/templates/core/visualizar-experimento.html
+++ b/core/templates/core/visualizar-experimento.html
@@ -183,16 +183,16 @@ var options = {
     x: {
       type: 'linear',
       position: 'bottom',
-      beginAtZero:true,
+      beginAtZero:false,
       scaleLabel: {
         display: true,
         labelString: 'Concentração'
       }
     },
     y: {
-      beginAtZero:true,
+      beginAtZero:false,
       ticks: {
-        beginAtZero: true
+        beginAtZero: false
       },
       scaleLabel: {
         display: true,
